--- a/mini-bank/vite-manifest.json
+++ b/mini-bank/vite-manifest.json
@@ -1,23 +1,19 @@
 {
-  "src/lib/assets/svelte-logo.svg": {
-    "file": "build/immutable/assets/svelte-logo-87df40b8.svg",
-    "src": "src/lib/assets/svelte-logo.svg"
-  },
-  "src/lib/assets/github.svg": {
-    "file": "build/immutable/assets/github-1ea8d62e.svg",
-    "src": "src/lib/assets/github.svg"
-  },
   "node_modules/@fontsource/fira-mono/files/fira-mono-cyrillic-400-normal.woff2": {
     "file": "build/immutable/assets/fira-mono-cyrillic-400-normal-c7d433fd.woff2",
     "src": "node_modules/@fontsource/fira-mono/files/fira-mono-cyrillic-400-normal.woff2"
+  },
+  "node_modules/@fontsource/fira-mono/files/fira-mono-greek-ext-400-normal.woff2": {
+    "file": "build/immutable/assets/fira-mono-greek-ext-400-normal-9e2fe623.woff2",
+    "src": "node_modules/@fontsource/fira-mono/files/fira-mono-greek-ext-400-normal.woff2"
   },
   "node_modules/@fontsource/fira-mono/files/fira-mono-greek-400-normal.woff2": {
     "file": "build/immutable/assets/fira-mono-greek-400-normal-a8be01ce.woff2",
     "src": "node_modules/@fontsource/fira-mono/files/fira-mono-greek-400-normal.woff2"
   },
-  "node_modules/@fontsource/fira-mono/files/fira-mono-greek-ext-400-normal.woff2": {
-    "file": "build/immutable/assets/fira-mono-greek-ext-400-normal-9e2fe623.woff2",
-    "src": "node_modules/@fontsource/fira-mono/files/fira-mono-greek-ext-400-normal.woff2"
+  "node_modules/@fontsource/fira-mono/files/fira-mono-cyrillic-ext-400-normal.woff2": {
+    "file": "build/immutable/assets/fira-mono-cyrillic-ext-400-normal-3df7909e.woff2",
+    "src": "node_modules/@fontsource/fira-mono/files/fira-mono-cyrillic-ext-400-normal.woff2"
   },
   "node_modules/@fontsource/fira-mono/files/fira-mono-latin-400-normal.woff2": {
     "file": "build/immutable/assets/fira-mono-latin-400-normal-e43b3538.woff2",
@@ -27,24 +23,17 @@
     "file": "build/immutable/assets/fira-mono-latin-ext-400-normal-6bfabd30.woff2",
     "src": "node_modules/@fontsource/fira-mono/files/fira-mono-latin-ext-400-normal.woff2"
   },
-  "node_modules/@fontsource/fira-mono/files/fira-mono-cyrillic-ext-400-normal.woff2": {
-    "file": "build/immutable/assets/fira-mono-cyrillic-ext-400-normal-3df7909e.woff2",
-    "src": "node_modules/@fontsource/fira-mono/files/fira-mono-cyrillic-ext-400-normal.woff2"
-  },
   "node_modules/@fontsource/fira-mono/files/fira-mono-all-400-normal.woff": {
     "file": "build/immutable/assets/fira-mono-all-400-normal-1e3b098c.woff",
     "src": "node_modules/@fontsource/fira-mono/files/fira-mono-all-400-normal.woff"
   },
-  "src/routes/+layout.css": {
-    "file": "build/immutable/assets/_layout-a159e3a9.css",
-    "src": "src/routes/+layout.css"
-  },
   "src/routes/+page.css": {
-    "file": "build/immutable/assets/_page-3f369344.css",
+    "file": "build/immutable/assets/_page-4850c8ec.css",
     "src": "src/routes/+page.css"
   },
-  "__page-57618ffe.js": {
-    "file": "build/immutable/chunks/_page-57618ffe.js"
+  "src/routes/+layout.css": {
+    "file": "build/immutable/assets/_layout-a02c23c6.css",
+    "src": "src/routes/+layout.css"
   },
   "src/routes/+page.js": {
     "file": "build/immutable/modules/pages/_page.js-dc85b7cd.js",
@@ -54,8 +43,24 @@
       "__page-da46b06b.js"
     ]
   },
+  "_stores-716fb08a.js": {
+    "file": "build/immutable/chunks/stores-716fb08a.js",
+    "imports": [
+      "_index-f90c03d8.js",
+      "_singletons-bce208e3.js"
+    ]
+  },
+  ".svelte-kit/generated/nodes/0.js": {
+    "file": "build/immutable/chunks/0-da0ec94e.js",
+    "src": ".svelte-kit/generated/nodes/0.js",
+    "isDynamicEntry": true,
+    "imports": [
+      "__layout-da46b06b.js",
+      "src/routes/+layout.svelte"
+    ]
+  },
   ".svelte-kit/generated/nodes/2.js": {
-    "file": "build/immutable/chunks/2-ecc946f2.js",
+    "file": "build/immutable/chunks/2-ac987a30.js",
     "src": ".svelte-kit/generated/nodes/2.js",
     "isDynamicEntry": true,
     "imports": [
@@ -64,95 +69,69 @@
     ]
   },
   ".svelte-kit/generated/nodes/1.js": {
-    "file": "build/immutable/chunks/1-553f7ad2.js",
+    "file": "build/immutable/chunks/1-00c64168.js",
     "src": ".svelte-kit/generated/nodes/1.js",
     "isDynamicEntry": true,
     "imports": [
       "node_modules/@sveltejs/kit/src/runtime/components/error.svelte"
     ]
   },
-  "_singletons-f6ce3e2c.js": {
-    "file": "build/immutable/chunks/singletons-f6ce3e2c.js",
-    "imports": [
-      "_index-47d25441.js"
-    ]
-  },
-  ".svelte-kit/generated/nodes/3.js": {
-    "file": "build/immutable/chunks/3-e9c9faf5.js",
-    "src": ".svelte-kit/generated/nodes/3.js",
-    "isDynamicEntry": true,
-    "imports": [
-      "__page-57618ffe.js",
-      "src/routes/about/+page.svelte"
-    ]
-  },
-  "src/routes/about/+page.js": {
-    "file": "build/immutable/modules/pages/about/_page.js-44076d6b.js",
-    "src": "src/routes/about/+page.js",
-    "isEntry": true,
-    "imports": [
-      "__page-57618ffe.js"
-    ]
-  },
-  ".svelte-kit/generated/nodes/0.js": {
-    "file": "build/immutable/chunks/0-162770be.js",
-    "src": ".svelte-kit/generated/nodes/0.js",
-    "isDynamicEntry": true,
-    "imports": [
-      "src/routes/+layout.svelte"
-    ]
-  },
-  "_stores-25052831.js": {
-    "file": "build/immutable/chunks/stores-25052831.js",
-    "imports": [
-      "_index-47d25441.js",
-      "_singletons-f6ce3e2c.js"
-    ]
-  },
-  "src/routes/about/+page.svelte": {
-    "file": "build/immutable/components/pages/about/_page.svelte-ec9d61c3.js",
-    "src": "src/routes/about/+page.svelte",
-    "isEntry": true,
-    "imports": [
-      "_index-47d25441.js"
-    ]
-  },
   "__page-da46b06b.js": {
     "file": "build/immutable/chunks/_page-da46b06b.js"
   },
-  "_index-47d25441.js": {
-    "file": "build/immutable/chunks/index-47d25441.js"
+  "_index-f90c03d8.js": {
+    "file": "build/immutable/chunks/index-f90c03d8.js"
   },
   "node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
-    "file": "build/immutable/components/error.svelte-e5cbd4aa.js",
+    "file": "build/immutable/components/error.svelte-16284acf.js",
     "src": "node_modules/@sveltejs/kit/src/runtime/components/error.svelte",
     "isEntry": true,
     "imports": [
-      "_index-47d25441.js",
-      "_stores-25052831.js"
+      "_index-f90c03d8.js",
+      "_stores-716fb08a.js"
     ]
   },
-  "src/routes/+page.svelte": {
-    "file": "build/immutable/components/pages/_page.svelte-b52abdc1.js",
-    "src": "src/routes/+page.svelte",
+  "__layout-da46b06b.js": {
+    "file": "build/immutable/chunks/_layout-da46b06b.js"
+  },
+  "src/routes/+layout.js": {
+    "file": "build/immutable/modules/pages/_layout.js-9cbb603b.js",
+    "src": "src/routes/+layout.js",
     "isEntry": true,
     "imports": [
-      "_index-47d25441.js"
+      "__layout-da46b06b.js"
+    ]
+  },
+  "_singletons-bce208e3.js": {
+    "file": "build/immutable/chunks/singletons-bce208e3.js",
+    "imports": [
+      "_index-f90c03d8.js"
+    ]
+  },
+  "node_modules/@sveltejs/kit/src/runtime/client/start.js": {
+    "file": "build/immutable/start-c31a0ac2.js",
+    "src": "node_modules/@sveltejs/kit/src/runtime/client/start.js",
+    "isEntry": true,
+    "imports": [
+      "_index-f90c03d8.js",
+      "_singletons-bce208e3.js"
     ],
-    "css": [
-      "build/immutable/assets/_page-3f369344.css"
+    "dynamicImports": [
+      ".svelte-kit/generated/nodes/0.js",
+      ".svelte-kit/generated/nodes/1.js",
+      ".svelte-kit/generated/nodes/2.js"
     ]
   },
   "src/routes/+layout.svelte": {
-    "file": "build/immutable/components/pages/_layout.svelte-221fd93e.js",
+    "file": "build/immutable/components/pages/_layout.svelte-bb02827e.js",
     "src": "src/routes/+layout.svelte",
     "isEntry": true,
     "imports": [
-      "_index-47d25441.js",
-      "_stores-25052831.js"
+      "_index-f90c03d8.js",
+      "_stores-716fb08a.js"
     ],
     "css": [
-      "build/immutable/assets/_layout-a159e3a9.css"
+      "build/immutable/assets/_layout-a02c23c6.css"
     ],
     "assets": [
       "build/immutable/assets/fira-mono-cyrillic-ext-400-normal-3df7909e.woff2",
@@ -164,19 +143,15 @@
       "build/immutable/assets/fira-mono-latin-400-normal-e43b3538.woff2"
     ]
   },
-  "node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "build/immutable/start-078c90ef.js",
-    "src": "node_modules/@sveltejs/kit/src/runtime/client/start.js",
+  "src/routes/+page.svelte": {
+    "file": "build/immutable/components/pages/_page.svelte-51765ef1.js",
+    "src": "src/routes/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index-47d25441.js",
-      "_singletons-f6ce3e2c.js"
+      "_index-f90c03d8.js"
     ],
-    "dynamicImports": [
-      ".svelte-kit/generated/nodes/0.js",
-      ".svelte-kit/generated/nodes/1.js",
-      ".svelte-kit/generated/nodes/2.js",
-      ".svelte-kit/generated/nodes/3.js"
+    "css": [
+      "build/immutable/assets/_page-4850c8ec.css"
     ]
   }
 }
