--- a/mini-bank/vite-manifest.json
+++ b/mini-bank/vite-manifest.json
@@ -1,4 +1,12 @@
 {
+  "node_modules/@fontsource/fira-mono/files/fira-mono-cyrillic-ext-400-normal.woff2": {
+    "file": "build/immutable/assets/fira-mono-cyrillic-ext-400-normal-3df7909e.woff2",
+    "src": "node_modules/@fontsource/fira-mono/files/fira-mono-cyrillic-ext-400-normal.woff2"
+  },
+  "node_modules/@fontsource/fira-mono/files/fira-mono-latin-ext-400-normal.woff2": {
+    "file": "build/immutable/assets/fira-mono-latin-ext-400-normal-6bfabd30.woff2",
+    "src": "node_modules/@fontsource/fira-mono/files/fira-mono-latin-ext-400-normal.woff2"
+  },
   "node_modules/@fontsource/fira-mono/files/fira-mono-cyrillic-400-normal.woff2": {
     "file": "build/immutable/assets/fira-mono-cyrillic-400-normal-c7d433fd.woff2",
     "src": "node_modules/@fontsource/fira-mono/files/fira-mono-cyrillic-400-normal.woff2"
@@ -7,92 +15,25 @@
     "file": "build/immutable/assets/fira-mono-greek-ext-400-normal-9e2fe623.woff2",
     "src": "node_modules/@fontsource/fira-mono/files/fira-mono-greek-ext-400-normal.woff2"
   },
-  "node_modules/@fontsource/fira-mono/files/fira-mono-greek-400-normal.woff2": {
-    "file": "build/immutable/assets/fira-mono-greek-400-normal-a8be01ce.woff2",
-    "src": "node_modules/@fontsource/fira-mono/files/fira-mono-greek-400-normal.woff2"
-  },
-  "node_modules/@fontsource/fira-mono/files/fira-mono-cyrillic-ext-400-normal.woff2": {
-    "file": "build/immutable/assets/fira-mono-cyrillic-ext-400-normal-3df7909e.woff2",
-    "src": "node_modules/@fontsource/fira-mono/files/fira-mono-cyrillic-ext-400-normal.woff2"
-  },
   "node_modules/@fontsource/fira-mono/files/fira-mono-latin-400-normal.woff2": {
     "file": "build/immutable/assets/fira-mono-latin-400-normal-e43b3538.woff2",
     "src": "node_modules/@fontsource/fira-mono/files/fira-mono-latin-400-normal.woff2"
   },
-  "node_modules/@fontsource/fira-mono/files/fira-mono-latin-ext-400-normal.woff2": {
-    "file": "build/immutable/assets/fira-mono-latin-ext-400-normal-6bfabd30.woff2",
-    "src": "node_modules/@fontsource/fira-mono/files/fira-mono-latin-ext-400-normal.woff2"
+  "node_modules/@fontsource/fira-mono/files/fira-mono-greek-400-normal.woff2": {
+    "file": "build/immutable/assets/fira-mono-greek-400-normal-a8be01ce.woff2",
+    "src": "node_modules/@fontsource/fira-mono/files/fira-mono-greek-400-normal.woff2"
   },
   "node_modules/@fontsource/fira-mono/files/fira-mono-all-400-normal.woff": {
     "file": "build/immutable/assets/fira-mono-all-400-normal-1e3b098c.woff",
     "src": "node_modules/@fontsource/fira-mono/files/fira-mono-all-400-normal.woff"
   },
   "src/routes/+page.css": {
-    "file": "build/immutable/assets/_page-4850c8ec.css",
+    "file": "build/immutable/assets/_page-bb0b01df.css",
     "src": "src/routes/+page.css"
   },
   "src/routes/+layout.css": {
-    "file": "build/immutable/assets/_layout-a02c23c6.css",
+    "file": "build/immutable/assets/_layout-475c7866.css",
     "src": "src/routes/+layout.css"
-  },
-  "src/routes/+page.js": {
-    "file": "build/immutable/modules/pages/_page.js-dc85b7cd.js",
-    "src": "src/routes/+page.js",
-    "isEntry": true,
-    "imports": [
-      "__page-da46b06b.js"
-    ]
-  },
-  "_stores-716fb08a.js": {
-    "file": "build/immutable/chunks/stores-716fb08a.js",
-    "imports": [
-      "_index-f90c03d8.js",
-      "_singletons-bce208e3.js"
-    ]
-  },
-  ".svelte-kit/generated/nodes/0.js": {
-    "file": "build/immutable/chunks/0-da0ec94e.js",
-    "src": ".svelte-kit/generated/nodes/0.js",
-    "isDynamicEntry": true,
-    "imports": [
-      "__layout-da46b06b.js",
-      "src/routes/+layout.svelte"
-    ]
-  },
-  ".svelte-kit/generated/nodes/2.js": {
-    "file": "build/immutable/chunks/2-ac987a30.js",
-    "src": ".svelte-kit/generated/nodes/2.js",
-    "isDynamicEntry": true,
-    "imports": [
-      "__page-da46b06b.js",
-      "src/routes/+page.svelte"
-    ]
-  },
-  ".svelte-kit/generated/nodes/1.js": {
-    "file": "build/immutable/chunks/1-00c64168.js",
-    "src": ".svelte-kit/generated/nodes/1.js",
-    "isDynamicEntry": true,
-    "imports": [
-      "node_modules/@sveltejs/kit/src/runtime/components/error.svelte"
-    ]
-  },
-  "__page-da46b06b.js": {
-    "file": "build/immutable/chunks/_page-da46b06b.js"
-  },
-  "_index-f90c03d8.js": {
-    "file": "build/immutable/chunks/index-f90c03d8.js"
-  },
-  "node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
-    "file": "build/immutable/components/error.svelte-16284acf.js",
-    "src": "node_modules/@sveltejs/kit/src/runtime/components/error.svelte",
-    "isEntry": true,
-    "imports": [
-      "_index-f90c03d8.js",
-      "_stores-716fb08a.js"
-    ]
-  },
-  "__layout-da46b06b.js": {
-    "file": "build/immutable/chunks/_layout-da46b06b.js"
   },
   "src/routes/+layout.js": {
     "file": "build/immutable/modules/pages/_layout.js-9cbb603b.js",
@@ -102,36 +43,88 @@
       "__layout-da46b06b.js"
     ]
   },
-  "_singletons-bce208e3.js": {
-    "file": "build/immutable/chunks/singletons-bce208e3.js",
+  "_store-f9b58571.js": {
+    "file": "build/immutable/chunks/store-f9b58571.js",
     "imports": [
-      "_index-f90c03d8.js"
+      "_index-fc13d5be.js"
     ]
   },
-  "node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "build/immutable/start-c31a0ac2.js",
-    "src": "node_modules/@sveltejs/kit/src/runtime/client/start.js",
+  "__layout-da46b06b.js": {
+    "file": "build/immutable/chunks/_layout-da46b06b.js"
+  },
+  ".svelte-kit/generated/nodes/1.js": {
+    "file": "build/immutable/chunks/1-4e22cacc.js",
+    "src": ".svelte-kit/generated/nodes/1.js",
+    "isDynamicEntry": true,
+    "imports": [
+      "node_modules/@sveltejs/kit/src/runtime/components/error.svelte"
+    ]
+  },
+  "src/routes/+page.js": {
+    "file": "build/immutable/modules/pages/_page.js-dc85b7cd.js",
+    "src": "src/routes/+page.js",
     "isEntry": true,
     "imports": [
-      "_index-f90c03d8.js",
-      "_singletons-bce208e3.js"
-    ],
-    "dynamicImports": [
-      ".svelte-kit/generated/nodes/0.js",
-      ".svelte-kit/generated/nodes/1.js",
-      ".svelte-kit/generated/nodes/2.js"
+      "__page-da46b06b.js"
     ]
   },
+  ".svelte-kit/generated/nodes/2.js": {
+    "file": "build/immutable/chunks/2-482c8757.js",
+    "src": ".svelte-kit/generated/nodes/2.js",
+    "isDynamicEntry": true,
+    "imports": [
+      "__page-da46b06b.js",
+      "src/routes/+page.svelte"
+    ]
+  },
+  "node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
+    "file": "build/immutable/components/error.svelte-d7063f23.js",
+    "src": "node_modules/@sveltejs/kit/src/runtime/components/error.svelte",
+    "isEntry": true,
+    "imports": [
+      "_index-fc13d5be.js",
+      "_stores-6a621915.js"
+    ]
+  },
+  "__page-da46b06b.js": {
+    "file": "build/immutable/chunks/_page-da46b06b.js"
+  },
+  "_singletons-094d810c.js": {
+    "file": "build/immutable/chunks/singletons-094d810c.js",
+    "imports": [
+      "_index-fc13d5be.js"
+    ]
+  },
+  "_stores-6a621915.js": {
+    "file": "build/immutable/chunks/stores-6a621915.js",
+    "imports": [
+      "_index-fc13d5be.js",
+      "_singletons-094d810c.js"
+    ]
+  },
+  ".svelte-kit/generated/nodes/0.js": {
+    "file": "build/immutable/chunks/0-68ebd8d6.js",
+    "src": ".svelte-kit/generated/nodes/0.js",
+    "isDynamicEntry": true,
+    "imports": [
+      "__layout-da46b06b.js",
+      "src/routes/+layout.svelte"
+    ]
+  },
+  "_index-fc13d5be.js": {
+    "file": "build/immutable/chunks/index-fc13d5be.js"
+  },
   "src/routes/+layout.svelte": {
-    "file": "build/immutable/components/pages/_layout.svelte-bb02827e.js",
+    "file": "build/immutable/components/pages/_layout.svelte-b4090d37.js",
     "src": "src/routes/+layout.svelte",
     "isEntry": true,
     "imports": [
-      "_index-f90c03d8.js",
-      "_stores-716fb08a.js"
+      "_index-fc13d5be.js",
+      "_stores-6a621915.js",
+      "_store-f9b58571.js"
     ],
     "css": [
-      "build/immutable/assets/_layout-a02c23c6.css"
+      "build/immutable/assets/_layout-475c7866.css"
     ],
     "assets": [
       "build/immutable/assets/fira-mono-cyrillic-ext-400-normal-3df7909e.woff2",
@@ -144,14 +137,29 @@
     ]
   },
   "src/routes/+page.svelte": {
-    "file": "build/immutable/components/pages/_page.svelte-51765ef1.js",
+    "file": "build/immutable/components/pages/_page.svelte-25d6d0ad.js",
     "src": "src/routes/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index-f90c03d8.js"
+      "_index-fc13d5be.js",
+      "_store-f9b58571.js"
     ],
     "css": [
-      "build/immutable/assets/_page-4850c8ec.css"
+      "build/immutable/assets/_page-bb0b01df.css"
+    ]
+  },
+  "node_modules/@sveltejs/kit/src/runtime/client/start.js": {
+    "file": "build/immutable/start-ab9d2fc1.js",
+    "src": "node_modules/@sveltejs/kit/src/runtime/client/start.js",
+    "isEntry": true,
+    "imports": [
+      "_index-fc13d5be.js",
+      "_singletons-094d810c.js"
+    ],
+    "dynamicImports": [
+      ".svelte-kit/generated/nodes/0.js",
+      ".svelte-kit/generated/nodes/1.js",
+      ".svelte-kit/generated/nodes/2.js"
     ]
   }
 }
