--- a/mini-bank/vite-manifest.json
+++ b/mini-bank/vite-manifest.json
@@ -1,19 +1,75 @@
 {
-  "node_modules/@fontsource/fira-mono/files/fira-mono-cyrillic-ext-400-normal.woff2": {
-    "file": "build/immutable/assets/fira-mono-cyrillic-ext-400-normal-3df7909e.woff2",
-    "src": "node_modules/@fontsource/fira-mono/files/fira-mono-cyrillic-ext-400-normal.woff2"
+  "src/lib/assets/Cap.gif": {
+    "file": "build/immutable/assets/Cap-3923f37f.gif",
+    "src": "src/lib/assets/Cap.gif"
   },
-  "node_modules/@fontsource/fira-mono/files/fira-mono-latin-ext-400-normal.woff2": {
-    "file": "build/immutable/assets/fira-mono-latin-ext-400-normal-6bfabd30.woff2",
-    "src": "node_modules/@fontsource/fira-mono/files/fira-mono-latin-ext-400-normal.woff2"
+  "src/lib/assets/Cloud.svg": {
+    "file": "build/immutable/assets/Cloud-d320f15d.svg",
+    "src": "src/lib/assets/Cloud.svg"
+  },
+  "src/lib/assets/Folder.gif": {
+    "file": "build/immutable/assets/Folder-12dc6868.gif",
+    "src": "src/lib/assets/Folder.gif"
+  },
+  "src/lib/assets/Bell.gif": {
+    "file": "build/immutable/assets/Bell-afb63ed5.gif",
+    "src": "src/lib/assets/Bell.gif"
+  },
+  "src/lib/assets/Card.gif": {
+    "file": "build/immutable/assets/Card-6eb71f9a.gif",
+    "src": "src/lib/assets/Card.gif"
+  },
+  "src/lib/assets/Cup.gif": {
+    "file": "build/immutable/assets/Cup-eacd5c59.gif",
+    "src": "src/lib/assets/Cup.gif"
+  },
+  "src/lib/assets/Enter.gif": {
+    "file": "build/immutable/assets/Enter-30e37ac0.gif",
+    "src": "src/lib/assets/Enter.gif"
+  },
+  "src/lib/assets/Gift.gif": {
+    "file": "build/immutable/assets/Gift-f3d7def5.gif",
+    "src": "src/lib/assets/Gift.gif"
+  },
+  "src/lib/assets/Location.gif": {
+    "file": "build/immutable/assets/Location-0cae5a81.gif",
+    "src": "src/lib/assets/Location.gif"
+  },
+  "src/lib/assets/Cake.gif": {
+    "file": "build/immutable/assets/Cake-810355e1.gif",
+    "src": "src/lib/assets/Cake.gif"
+  },
+  "src/lib/assets/Candle.gif": {
+    "file": "build/immutable/assets/Candle-223a5ae5.gif",
+    "src": "src/lib/assets/Candle.gif"
+  },
+  "src/lib/assets/Flower.gif": {
+    "file": "build/immutable/assets/Flower-b3d305ef.gif",
+    "src": "src/lib/assets/Flower.gif"
+  },
+  "src/lib/assets/Tube.gif": {
+    "file": "build/immutable/assets/Tube-167a8e59.gif",
+    "src": "src/lib/assets/Tube.gif"
+  },
+  "src/lib/assets/House.gif": {
+    "file": "build/immutable/assets/House-a79d8cfe.gif",
+    "src": "src/lib/assets/House.gif"
+  },
+  "src/lib/assets/Trash.gif": {
+    "file": "build/immutable/assets/Trash-1d83b05d.gif",
+    "src": "src/lib/assets/Trash.gif"
+  },
+  "src/lib/assets/Window.gif": {
+    "file": "build/immutable/assets/Window-ffab02b3.gif",
+    "src": "src/lib/assets/Window.gif"
   },
   "node_modules/@fontsource/fira-mono/files/fira-mono-cyrillic-400-normal.woff2": {
     "file": "build/immutable/assets/fira-mono-cyrillic-400-normal-c7d433fd.woff2",
     "src": "node_modules/@fontsource/fira-mono/files/fira-mono-cyrillic-400-normal.woff2"
   },
-  "node_modules/@fontsource/fira-mono/files/fira-mono-greek-ext-400-normal.woff2": {
-    "file": "build/immutable/assets/fira-mono-greek-ext-400-normal-9e2fe623.woff2",
-    "src": "node_modules/@fontsource/fira-mono/files/fira-mono-greek-ext-400-normal.woff2"
+  "node_modules/@fontsource/fira-mono/files/fira-mono-cyrillic-ext-400-normal.woff2": {
+    "file": "build/immutable/assets/fira-mono-cyrillic-ext-400-normal-3df7909e.woff2",
+    "src": "node_modules/@fontsource/fira-mono/files/fira-mono-cyrillic-ext-400-normal.woff2"
   },
   "node_modules/@fontsource/fira-mono/files/fira-mono-latin-400-normal.woff2": {
     "file": "build/immutable/assets/fira-mono-latin-400-normal-e43b3538.woff2",
@@ -23,17 +79,31 @@
     "file": "build/immutable/assets/fira-mono-greek-400-normal-a8be01ce.woff2",
     "src": "node_modules/@fontsource/fira-mono/files/fira-mono-greek-400-normal.woff2"
   },
+  "node_modules/@fontsource/fira-mono/files/fira-mono-greek-ext-400-normal.woff2": {
+    "file": "build/immutable/assets/fira-mono-greek-ext-400-normal-9e2fe623.woff2",
+    "src": "node_modules/@fontsource/fira-mono/files/fira-mono-greek-ext-400-normal.woff2"
+  },
+  "node_modules/@fontsource/fira-mono/files/fira-mono-latin-ext-400-normal.woff2": {
+    "file": "build/immutable/assets/fira-mono-latin-ext-400-normal-6bfabd30.woff2",
+    "src": "node_modules/@fontsource/fira-mono/files/fira-mono-latin-ext-400-normal.woff2"
+  },
   "node_modules/@fontsource/fira-mono/files/fira-mono-all-400-normal.woff": {
     "file": "build/immutable/assets/fira-mono-all-400-normal-1e3b098c.woff",
     "src": "node_modules/@fontsource/fira-mono/files/fira-mono-all-400-normal.woff"
   },
   "src/routes/+page.css": {
-    "file": "build/immutable/assets/_page-bb0b01df.css",
+    "file": "build/immutable/assets/_page-a623f705.css",
     "src": "src/routes/+page.css"
   },
   "src/routes/+layout.css": {
-    "file": "build/immutable/assets/_layout-475c7866.css",
+    "file": "build/immutable/assets/_layout-2a34c316.css",
     "src": "src/routes/+layout.css"
+  },
+  "_store-f51f0530.js": {
+    "file": "build/immutable/chunks/store-f51f0530.js",
+    "imports": [
+      "_index-031533bf.js"
+    ]
   },
   "src/routes/+layout.js": {
     "file": "build/immutable/modules/pages/_layout.js-9cbb603b.js",
@@ -43,22 +113,29 @@
       "__layout-da46b06b.js"
     ]
   },
-  "_store-f9b58571.js": {
-    "file": "build/immutable/chunks/store-f9b58571.js",
+  ".svelte-kit/generated/nodes/0.js": {
+    "file": "build/immutable/chunks/0-fc1b3330.js",
+    "src": ".svelte-kit/generated/nodes/0.js",
+    "isDynamicEntry": true,
     "imports": [
-      "_index-fc13d5be.js"
+      "__layout-da46b06b.js",
+      "src/routes/+layout.svelte"
+    ]
+  },
+  "__page-da46b06b.js": {
+    "file": "build/immutable/chunks/_page-da46b06b.js"
+  },
+  ".svelte-kit/generated/nodes/2.js": {
+    "file": "build/immutable/chunks/2-1113b456.js",
+    "src": ".svelte-kit/generated/nodes/2.js",
+    "isDynamicEntry": true,
+    "imports": [
+      "__page-da46b06b.js",
+      "src/routes/+page.svelte"
     ]
   },
   "__layout-da46b06b.js": {
     "file": "build/immutable/chunks/_layout-da46b06b.js"
-  },
-  ".svelte-kit/generated/nodes/1.js": {
-    "file": "build/immutable/chunks/1-4e22cacc.js",
-    "src": ".svelte-kit/generated/nodes/1.js",
-    "isDynamicEntry": true,
-    "imports": [
-      "node_modules/@sveltejs/kit/src/runtime/components/error.svelte"
-    ]
   },
   "src/routes/+page.js": {
     "file": "build/immutable/modules/pages/_page.js-dc85b7cd.js",
@@ -68,63 +145,64 @@
       "__page-da46b06b.js"
     ]
   },
-  ".svelte-kit/generated/nodes/2.js": {
-    "file": "build/immutable/chunks/2-482c8757.js",
-    "src": ".svelte-kit/generated/nodes/2.js",
+  "_singletons-3e3fa64d.js": {
+    "file": "build/immutable/chunks/singletons-3e3fa64d.js",
+    "imports": [
+      "_index-031533bf.js"
+    ]
+  },
+  ".svelte-kit/generated/nodes/1.js": {
+    "file": "build/immutable/chunks/1-2659227e.js",
+    "src": ".svelte-kit/generated/nodes/1.js",
     "isDynamicEntry": true,
     "imports": [
-      "__page-da46b06b.js",
-      "src/routes/+page.svelte"
+      "node_modules/@sveltejs/kit/src/runtime/components/error.svelte"
+    ]
+  },
+  "_stores-03f2ddc2.js": {
+    "file": "build/immutable/chunks/stores-03f2ddc2.js",
+    "imports": [
+      "_index-031533bf.js",
+      "_singletons-3e3fa64d.js"
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
-    "file": "build/immutable/components/error.svelte-d7063f23.js",
+    "file": "build/immutable/components/error.svelte-2d1724ea.js",
     "src": "node_modules/@sveltejs/kit/src/runtime/components/error.svelte",
     "isEntry": true,
     "imports": [
-      "_index-fc13d5be.js",
-      "_stores-6a621915.js"
+      "_index-031533bf.js",
+      "_stores-03f2ddc2.js"
     ]
   },
-  "__page-da46b06b.js": {
-    "file": "build/immutable/chunks/_page-da46b06b.js"
+  "_index-031533bf.js": {
+    "file": "build/immutable/chunks/index-031533bf.js"
   },
-  "_singletons-094d810c.js": {
-    "file": "build/immutable/chunks/singletons-094d810c.js",
+  "node_modules/@sveltejs/kit/src/runtime/client/start.js": {
+    "file": "build/immutable/start-ee7158b2.js",
+    "src": "node_modules/@sveltejs/kit/src/runtime/client/start.js",
+    "isEntry": true,
     "imports": [
-      "_index-fc13d5be.js"
+      "_index-031533bf.js",
+      "_singletons-3e3fa64d.js"
+    ],
+    "dynamicImports": [
+      ".svelte-kit/generated/nodes/0.js",
+      ".svelte-kit/generated/nodes/1.js",
+      ".svelte-kit/generated/nodes/2.js"
     ]
-  },
-  "_stores-6a621915.js": {
-    "file": "build/immutable/chunks/stores-6a621915.js",
-    "imports": [
-      "_index-fc13d5be.js",
-      "_singletons-094d810c.js"
-    ]
-  },
-  ".svelte-kit/generated/nodes/0.js": {
-    "file": "build/immutable/chunks/0-68ebd8d6.js",
-    "src": ".svelte-kit/generated/nodes/0.js",
-    "isDynamicEntry": true,
-    "imports": [
-      "__layout-da46b06b.js",
-      "src/routes/+layout.svelte"
-    ]
-  },
-  "_index-fc13d5be.js": {
-    "file": "build/immutable/chunks/index-fc13d5be.js"
   },
   "src/routes/+layout.svelte": {
-    "file": "build/immutable/components/pages/_layout.svelte-b4090d37.js",
+    "file": "build/immutable/components/pages/_layout.svelte-337c1b49.js",
     "src": "src/routes/+layout.svelte",
     "isEntry": true,
     "imports": [
-      "_index-fc13d5be.js",
-      "_stores-6a621915.js",
-      "_store-f9b58571.js"
+      "_index-031533bf.js",
+      "_store-f51f0530.js",
+      "_stores-03f2ddc2.js"
     ],
     "css": [
-      "build/immutable/assets/_layout-475c7866.css"
+      "build/immutable/assets/_layout-2a34c316.css"
     ],
     "assets": [
       "build/immutable/assets/fira-mono-cyrillic-ext-400-normal-3df7909e.woff2",
@@ -133,33 +211,36 @@
       "build/immutable/assets/fira-mono-greek-ext-400-normal-9e2fe623.woff2",
       "build/immutable/assets/fira-mono-greek-400-normal-a8be01ce.woff2",
       "build/immutable/assets/fira-mono-latin-ext-400-normal-6bfabd30.woff2",
-      "build/immutable/assets/fira-mono-latin-400-normal-e43b3538.woff2"
+      "build/immutable/assets/fira-mono-latin-400-normal-e43b3538.woff2",
+      "build/immutable/assets/Cloud-d320f15d.svg"
     ]
   },
   "src/routes/+page.svelte": {
-    "file": "build/immutable/components/pages/_page.svelte-25d6d0ad.js",
+    "file": "build/immutable/components/pages/_page.svelte-3fc22a5a.js",
     "src": "src/routes/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index-fc13d5be.js",
-      "_store-f9b58571.js"
+      "_index-031533bf.js",
+      "_store-f51f0530.js"
     ],
     "css": [
-      "build/immutable/assets/_page-bb0b01df.css"
-    ]
-  },
-  "node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "build/immutable/start-ab9d2fc1.js",
-    "src": "node_modules/@sveltejs/kit/src/runtime/client/start.js",
-    "isEntry": true,
-    "imports": [
-      "_index-fc13d5be.js",
-      "_singletons-094d810c.js"
+      "build/immutable/assets/_page-a623f705.css"
     ],
-    "dynamicImports": [
-      ".svelte-kit/generated/nodes/0.js",
-      ".svelte-kit/generated/nodes/1.js",
-      ".svelte-kit/generated/nodes/2.js"
+    "assets": [
+      "build/immutable/assets/Bell-afb63ed5.gif",
+      "build/immutable/assets/Cake-810355e1.gif",
+      "build/immutable/assets/Candle-223a5ae5.gif",
+      "build/immutable/assets/Cap-3923f37f.gif",
+      "build/immutable/assets/Card-6eb71f9a.gif",
+      "build/immutable/assets/Cup-eacd5c59.gif",
+      "build/immutable/assets/Enter-30e37ac0.gif",
+      "build/immutable/assets/Flower-b3d305ef.gif",
+      "build/immutable/assets/Folder-12dc6868.gif",
+      "build/immutable/assets/Location-0cae5a81.gif",
+      "build/immutable/assets/House-a79d8cfe.gif",
+      "build/immutable/assets/Tube-167a8e59.gif",
+      "build/immutable/assets/Trash-1d83b05d.gif",
+      "build/immutable/assets/Window-ffab02b3.gif"
     ]
   }
 }
