--- a/ee/manifest.json
+++ b/ee/manifest.json
@@ -1,8 +1,8 @@
 {
   "short_name": "Eesti Power",
   "name": "Eesti Power Price",
-  "theme_color": "#4A90E2",
-  "background_color": "#F7F8F9",
+  "theme_color": "#FFF",
+  "background_color": "#FFF",
   "display": "standalone",
   "icons": [
     {
